--- a/WhimsyWares.html
+++ b/WhimsyWares.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazon</title>
+    <title>WhimsyWares</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="amazon.css">
+    <link rel="stylesheet" href="WhimsyWares.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <div class="navbar">
 
             <div class="nav-logo border">
-                <div class="logo"></div>
+                <div class="logo"  style="background-image: url('logo_transparent.png')"></div>
             </div>
             <div class="nav-address">
                 <p class="add-first">Deliver to</p>
@@ -29,7 +29,7 @@
                 <select class="search-select">
                     <option value="">All</option>
                 </select>
-                <input placeholder="Search Amazon" class="search-input">
+                <input placeholder="Search WhimsyWares" class="search-input">
                 <div class="search-icon">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
@@ -72,8 +72,8 @@
 
     <div class="hero-section">
         <div class="hero-msg">
-            <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local
-                delivery. <a> Click here to go to amazon.in</a></p>
+            <p>You are on WhimsyWares.com. You can also shop on WhimsyWares India for millions of products with fast local
+                delivery. <a> Click here to go to WhimsyWares.in</a></p>
         </div>
     </div>
 
@@ -146,40 +146,40 @@
                 <p> Get to Know Us</p>
                 <a>Careers</a>
                 <a>Blog</a>
-                <a>About Amazon</a>
+                <a>About WhimsyWares</a>
                 <a>Investor Relations</a>
-                <a>Amazon Devices</a>
-                <a>Amazon Science</a>
+                <a>WhimsyWares Devices</a>
+                <a>WhimsyWares Science</a>
 
             </ul>
             <ul>
-                <p> Get to Know Us</p>
-                <a>Careers</a>
-                <a>Blog</a>
-                <a>About Amazon</a>
-                <a>Investor Relations</a>
-                <a>Amazon Devices</a>
-                <a>Amazon Science</a>
+                <p>Make Money with Us </p>
+                <a>Sell products on WhimsyWares</a>
+                <a>Sell on WhimsyWares Business</a>
+                <a>Sell apps on WhimsyWares</a>
+                <a>Become an Affiliate</a>
+                <a>Advertise Your Products</a>
+                <a>Self-Publish with Us</a>
 
             </ul>
             <ul>
-                <p> Get to Know Us</p>
-                <a>Careers</a>
-                <a>Blog</a>
-                <a>About Amazon</a>
+                <p> WhimsyWares Payment Products</p>
+                <a>WhimsyWares Business Card</a>
+                <a> Shop with Points</a>
+                <a>Reload Your Balance</a>
                 <a>Investor Relations</a>
-                <a>Amazon Devices</a>
-                <a>Amazon Science</a>
+                <a>WhimsyWares Currency Converter</a>
+                
 
             </ul>
             <ul>
-                <p> Get to Know Us</p>
-                <a>Careers</a>
-                <a>Blog</a>
-                <a>About Amazon</a>
-                <a>Investor Relations</a>
-                <a>Amazon Devices</a>
-                <a>Amazon Science</a>
+                <p> Let Us Help You</p>
+                <a> WhimsyWares and COVID-19</a>
+                <a>Your Account</a>
+                <a>Your Orders</a>
+                <a> Shipping Rates & Policies</a>
+                <a> Returns & Replacements</a>
+                <a> Manage Your Content and Devices</a>
 
             </ul>
         </div>
@@ -193,7 +193,7 @@
                 <a>Privacy Notice</a>
                 <a>Your Ads Privacy Choices</a>
             </div>
-            <div class="copyright">© 1996-2024, Amazon.com, Inc. or its affiliates</div>
+            <div class="copyright">© 1996-2024, WhimsyWares.com, Inc. or its affiliates</div>
         </div>
     </footer>
 
